--- a/leetcode/动态规划/信封嵌套.md
+++ b/leetcode/动态规划/信封嵌套.md
@@ -8,8 +8,8 @@
 
 ***思路***：这道题的解法非常巧妙，因为它本质上就是一道求最长递增子序列的题目（LIS）。信封有宽高，为了想装更多的信封，我们可以先按照信封的宽对整个数组进行排序，但是肯定有宽度相同的信封啊，我们如果光按照宽度递增排序，那么高度不同的信封应该怎么办呢？对于宽度相同的信封，高度按照降序排列。这样，在高度这个数组上进行LIS算法的结果，就是最多可以嵌套的数量了。
 
-![高度降序](https://gblobscdn.gitbook.com/assets%2F-LrtQOWSnDdXhp3kYN4k%2Fsync%2Fdf0cc5fb3a72c69e2c0493d1900715a513dcd7b5.jpg?alt=media)
-![LIS](https://gblobscdn.gitbook.com/assets%2F-LrtQOWSnDdXhp3kYN4k%2Fsync%2F4e256327c4ebf2b9c9c132ea6de340105d748cf7.jpg?alt=media)
+![高度降序](../../imgs/信封1.jpg)
+![LIS](../../imgs/信封2.jpg)
 
 看这两个图就很直观明了了，至于为什么要降序排列高度呢？也很好理解，因为一个宽度的数组肯定只能出现一次。对应到高度上，也就是说相同宽度下只能选择一个高度，如果高度不降序排列，就肯定会找到过长的递增子序列，但是这样的子序列是不合法的，只能降序排列。
 
