--- a/leetcode/动态规划/四键键盘.md
+++ b/leetcode/动态规划/四键键盘.md
@@ -1,6 +1,6 @@
 ### 四键键盘
 ***题目***：
-![题目](https://gblobscdn.gitbook.com/assets%2F-LrtQOWSnDdXhp3kYN4k%2Fsync%2F6413dee2c83f74205c7f2d5eb0784232429512de.png?alt=media)
+![题目](../../imgs/四键键盘.png)
 
 ***思路***：
 - 方法1. 很显然这是个穷举的问题，我们可以DP来剪枝。关于状态的定义，我们可以选择{当前剩余的按键数、当前屏幕上的A数量(a_num)、当前缓冲区内的A数量(copy)}来表示当前局面。选择的话，我们每次可以有四种按键选择，状态转移方程就呼之欲出了：
