更新:我好累啊

--- a/leetcode/动态规划/编辑距离.md
+++ b/leetcode/动态规划/编辑距离.md
@@ -28,3 +28,6 @@
         dp[i-1][j], // 删除
         dp[i][j-1] // 添加
     ) + 1, 当str1[i] != str2[j]时；
+
+之前总是困惑这个状态转移方程的正确性，用上面的思路思考固然可以，后来在知乎上又找到一个帮助理解的，如下：
+![编辑距离](../../imgs/编辑距离.png)
