--- a/题目汇总.md
+++ b/题目汇总.md
@@ -98,3 +98,19 @@
 51. 最长不含重复字符的子字符串
 52. 礼物的最大值
 53. 连续子数组的最大和
+
+54. 字符串的全排列
+55. 机器人的运动范围
+56. 矩阵中的路径
+
+57. 替换空格
+58. 翻转字符串
+59. 左旋转字符串
+60. 表示数值的字符串
+61. 把字符串转为整数
+
+第一个只出现一次的字符
+
+不用加减乘除做加法
+构建乘积数组
+求1+2+3+……+n
