剑指offer题目更新

--- a/题目汇总.md
+++ b/题目汇总.md
@@ -109,8 +109,24 @@
 60. 表示数值的字符串
 61. 把字符串转为整数
 
-第一个只出现一次的字符
+62. 顺时针打印二维矩阵
+63. 第一个只出现一次的字符（拓展：字符流中一个只出现一次的字符）
 
-不用加减乘除做加法
-构建乘积数组
-求1+2+3+……+n
+64. 1~n整数中1出现的次数
+65. 丑数
+66. 把数组排成最小的数
+67. 数字序列中某一位的数字
+
+68. 打印从1到最大的n位数
+69. 数值的整数次方
+
+70. n个骰子的点数
+71. 扑克牌中的顺子
+72. 股票的最大利润
+74. 圆圈中最后剩下的数字
+
+75. 不用加减乘除做加法
+76. 构建乘积数组
+77. 求1+2+3+……+n
+
+78. 正则表达式匹配
