--- a/题目汇总.md
+++ b/题目汇总.md
@@ -130,3 +130,68 @@
 77. 求1+2+3+……+n
 
 78. 正则表达式匹配
+--- 
+labuladong
+
+**动态规划**
+1. 凑零钱问题
+2. 股票问题（一次交易、不限次数、含手续费、含冷却期、K次交易）
+3. 打家劫舍I
+4. 打家劫舍II
+5. 打家劫舍III
+6. 0-1背包
+7. 子集背包：分割等和子集
+
+
+**回溯**
+1. N皇后问题
+
+**BFS**
+1. 二叉树的最小高度
+2. 解开密码锁的最少次数
+
+**二分查找**
+1. 普通二分查找
+2. 寻找左侧边界的二分查找
+3. 寻找右侧边界的二分查找
+
+**滑动窗口**
+1. 最小覆盖子串(76)
+2. 字符串的排列(567)
+3. 找到字符串中的所有字母异位词(438)
+4. 无重复字符从最长子串(3)
+
+**区间问题**
+1. 删除被覆盖区间(1288)
+2. 区间合并(56)
+3. 区间列表的交集(986)
+
+**数据结构**
+1. 翻转二叉树
+2. 填充每个节点的下一个右侧指针节点(116)
+3. 二叉树展开为链表(114)
+4. 二叉树中的最大路径和(124)
+5. 恢复一棵BST(99)
+6. 最大二叉树(654)
+7. 前序遍历和中序遍历构建二叉树
+8. 中序遍历和后序遍历构建二叉树
+9. 寻找重复的子树(652)
+10. BST第K小的元素
+11. 把BST转换为累加树(1038)
+12. 删除BST中的节点(450)
+13. BST中的插入操作(701)
+14. BST中的搜索(700)
+15. 验证是否为BST(98)
+16. 二叉树的序列化与反序列化(中序遍历无法反序列化)
+17. 计算完全二叉树的节点个数
+18. 二叉树最近公共祖先节点
+
+反转链表（递归&&非递归）
+反转链表的前N个节点
+反转链表的一部分
+K个一组反转链表
+判断回文链表
+
+**经典题型**
+1. nSum求和
+2. 
