--- a/题目汇总.md
+++ b/题目汇总.md
@@ -185,12 +185,11 @@ labuladong
 16. 二叉树的序列化与反序列化(中序遍历无法反序列化)
 17. 计算完全二叉树的节点个数
 18. 二叉树最近公共祖先节点
-
-反转链表（递归&&非递归）
-反转链表的前N个节点
-反转链表的一部分
-K个一组反转链表
-判断回文链表
+19. 反转链表（递归&&非递归）
+20. 反转链表的前N个节点
+21. 反转链表的一部分
+22. K个一组反转链表
+23. 判断回文链表
 
 **经典题型**
 1. nSum求和
