--- a/题目汇总.md
+++ b/题目汇总.md
@@ -141,6 +141,14 @@ labuladong
 5. 打家劫舍III
 6. 0-1背包
 7. 子集背包：分割等和子集
+8. 目标和
+9. 完全背包：零钱兑换II
+10. 最大连续子数组和
+11. 最长递增子序列
+12. 最长公共子序列
+13. 最长回文子串
+14. 最长回文子序列
+15. 构造回文字符串的最小插入次数
 
 
 **回溯**
@@ -190,7 +198,27 @@ labuladong
 21. 反转链表的一部分
 22. K个一组反转链表
 23. 判断回文链表
+24. 二叉搜索子树的最大键值和(1373)
+25. 被围绕的区域(130.并查集)
+26. 等式方程的可满足性(990.并查集)
+27. LRU缓存算法
+29. LFU缓存算法
+30. 数据流中的中位数(2个优先队列)
+31. 下一个更大元素I(496)
+32. 下一个更大元素II(503)
+33. 每日温度(739)
+34. 删除排序数组中的重复项
+35. 删除排序链表中的重复元素
+36. 移除元素
+37. 移动零
+38. 去除重复字母(316)
+
+
 
 **经典题型**
 1. nSum求和
-2. 
+2. 设计推特(355)
+3. 爱吃香蕉的珂珂(875.二分查找)
+4. 在D天内送达包裹的能力(1011.二分查找)
+5. 常数时间内添加、删除和获取随机元素(380)
+6. 黑名单中的随机数(710)
