--- a/题目汇总.md
+++ b/题目汇总.md
@@ -149,6 +149,10 @@ labuladong
 13. 最长回文子串
 14. 最长回文子序列
 15. 构造回文字符串的最小插入次数
+16. 编辑距离
+17. 信封嵌套
+18. 跳跃游戏(55.贪心)
+19. 跳跃游戏II(45.贪心)
 
 
 **回溯**
@@ -173,6 +177,8 @@ labuladong
 1. 删除被覆盖区间(1288)
 2. 区间合并(56)
 3. 区间列表的交集(986)
+4. 无重叠区间(435)
+5. 用最少数量的箭引爆气球(452)
 
 **数据结构**
 1. 翻转二叉树
@@ -212,8 +218,6 @@ labuladong
 36. 移除元素
 37. 移动零
 38. 去除重复字母(316)
-
-
 
 **经典题型**
 1. nSum求和
