--- a/题目汇总.md
+++ b/题目汇总.md
@@ -153,14 +153,26 @@ labuladong
 17. 信封嵌套
 18. 跳跃游戏(55.贪心)
 19. 跳跃游戏II(45.贪心)
+20. 鸡蛋掉落(887)
+21. 戳气球
+22. 博弈问题
+23. 四键键盘
+24. KMP算法
 
 
 **回溯**
 1. N皇后问题
+2. 子集问题(78)
+3. 全排列(46)
+4. 组合(77)
+5. 解数独
+6. 括号生成
+
 
 **BFS**
 1. 二叉树的最小高度
 2. 解开密码锁的最少次数
+3. 滑动谜题(773)
 
 **二分查找**
 1. 普通二分查找
@@ -226,3 +238,15 @@ labuladong
 4. 在D天内送达包裹的能力(1011.二分查找)
 5. 常数时间内添加、删除和获取随机元素(380)
 6. 黑名单中的随机数(710)
+7. 位为1的个数
+8. 阶乘后的零
+9. 阶乘后K个零
+10. 计数质数(204)
+11. 超级次方(372)
+12. 链表随机节点(382)
+13. 随机数索引(398) -- 水塘抽样算法
+14. Nim游戏
+15. 石子游戏(877)
+16. 灯泡开关
+17. 和为K的子数组(前缀和)
+18. 航班预订统计(差分数组)
