--- a/题目汇总.md
+++ b/题目汇总.md
@@ -20,7 +20,7 @@
 
 ### 算法题目
 ---
-小灰算法
+**小灰算法**
 1. 用栈实现队列/用队列实现栈
 2. 最小栈/最大栈
 3. 判断一个数是否是2的整数次方
@@ -37,7 +37,7 @@
 14. A星寻址算法
 15. 红包算法
 ---
-剑指offer
+**剑指offer**
 1. 二维数组的查找
 2. 数组中重复的值
 3. 数组中出现次数超过一半的数字
@@ -131,7 +131,7 @@
 
 78. 正则表达式匹配
 --- 
-labuladong
+**labuladong**
 
 **动态规划**
 1. 凑零钱问题
@@ -159,7 +159,6 @@ labuladong
 23. 四键键盘
 24. KMP算法
 
-
 **回溯**
 1. N皇后问题
 2. 子集问题(78)
@@ -167,7 +166,6 @@ labuladong
 4. 组合(77)
 5. 解数独
 6. 括号生成
-
 
 **BFS**
 1. 二叉树的最小高度
@@ -250,3 +248,22 @@ labuladong
 16. 灯泡开关
 17. 和为K的子数组(前缀和)
 18. 航班预订统计(差分数组)
+19. 数组中第K大的元素(partition方法)
+20. 为运算表达式设计优先级(241)
+21. 吃葡萄
+22. 煎饼排序
+23. 字符串相乘
+24. 实现计算器
+25. 接雨水(42)
+26. 有效的括号
+27. 完美矩形
+28. 考场就坐(855)
+29. 判断子序列
+---
+
+**leetcode**
+
+1. 岛屿的周长(463)
+2. 岛屿的数量(200)
+3. 统计封闭岛屿的数目(1254)
+4. 岛屿的最大面积(695)
