--- a/一些思路/如何理解递归.md
+++ b/一些思路/如何理解递归.md
@@ -56,4 +56,5 @@
 ## 递归思维
 最后，引用一段知乎上的话，觉得说的挺好的：
 >如何学习递归？   
->首先是思想方法上要转变，不要试图解决问题(这是常规的思考方式)，而应该“鼠目寸光”地只想解决一点点，要点是，解决一点点之后，剩下来的问题还是原来的问题，但规模要比原问题小了思想和语言是密切相关的，所以问题的提法也很重要。一个问题这样提可能感觉很难写出递归，换种提法，可能就写出来了。平时就要注意用递归的方式思考，譬如什么是链表？以递归来看就是一个指针，指向一个含有链表的指针。一旦你用这种方式看待链表，你会发现写链表的代码非常容易。反之，则非常容易拖泥带水从代码层面看，递归就是函数的循环，所以只要透彻理解函数，写递归代码没什么难的。
+>首先是思想方法上要转变，不要试图解决问题(这是常规的思考方式)，而应该“鼠目寸光”地只想解决一点点，要点是，解决一点点之后，剩下来的问题还是原来的问题，但规模要比原问题小了。
+>思想和语言是密切相关的，所以问题的提法也很重要。一个问题这样提可能感觉很难写出递归，换种提法，可能就写出来了。平时就要注意用递归的方式思考，譬如什么是链表？以递归来看就是一个指针，指向一个含有链表的指针。一旦你用这种方式看待链表，你会发现写链表的代码非常容易。反之，则非常容易拖泥带水。从代码层面看，递归就是函数的循环，所以只要透彻理解函数，写递归代码没什么难的。
